--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -7,5 +7,8 @@
 	@@include('./src/html/includes/content/map.html')
 
 </main>
-	
+
+<!-- include templates -->
+@@include('./src/html/includes/templates/infobox-tmpl.html')
+
 @@include('./src/html/includes/_base/footer.html')
