--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -1,5 +1,7 @@
 @@include('./src/html/includes/_base/head.html')
 
+<div id="error">! there is a maximum of three displays</div>
+
 <main role="main"> 
 
 	@@include('./src/html/includes/content/filters.html')
