--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -2,6 +2,8 @@
 
 <div id="error">! there is a maximum of three displays</div>
 
+@@include('./src/html/includes/content/splashpage.html')
+
 <main role="main"> 
 
 	@@include('./src/html/includes/content/filters.html')
